--- a/src/App.css
+++ b/src/App.css
@@ -185,3 +185,19 @@ p {
   color: white;
   padding: 2px 6px;
 }
+
+/* Events Handler */
+.btnContainer {
+  display: block;
+}
+
+.events {
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+.name {
+  cursor: pointer;
+}
